--- a/testbed/docker/buildContext/resolver/unbound-1.16.0/unbound.conf
+++ b/testbed/docker/buildContext/resolver/unbound-1.16.0/unbound.conf
@@ -24,6 +24,10 @@ server:
         # access-control: 2001:DB8/64 allow
         root-hints: /usr/local/etc/unbound/db.root
 
+        logfile: /usr/local/etc/logs/query.log
+        verbosity: 2
+        log-queries: yes
+
 remote-control:
         # allows controling unbound using "unbound-control"
         control-enable: yes
