--- a/testbed/docker/buildContext/resolver/powerdns-4.7/recursor.conf
+++ b/testbed/docker/buildContext/resolver/powerdns-4.7/recursor.conf
@@ -163,7 +163,7 @@ dnssec=off
 #################################
 # dont-query	If set, do not query these netmasks for DNS data
 #
-dont-query=127.0.0.0/8, 10.0.0.0/8, 100.64.0.0/10, 169.254.0.0/16, 172.16.0.0/12, ::1/128, fc00::/7, fe80::/10, 0.0.0.0/8, 192.0.0.0/24, 192.0.2.0/24, 198.51.100.0/24, 203.0.113.0/24, 240.0.0.0/4, ::/96, ::ffff:0:0/96, 100::/64, 2001:db8::/32
+dont-query=
 
 #################################
 # dont-throttle-names	Do not throttle nameservers with this name or suffix
@@ -375,7 +375,7 @@ local-address=0.0.0.0
 #################################
 # lua-config-file	More powerful configuration options
 #
-#lua-config-file=/etc/powerdns/recursor.lua
+lua-config-file=/etc/powerdns/recursor.lua
 
 #################################
 # lua-dns-script	Filename containing an optional 'lua' script that will be used to modify dns answers
