--- a/docker/buildContext/resolver/resolver-unbound-1.16.0/unbound.conf
+++ b/docker/buildContext/resolver/resolver-unbound-1.16.0/unbound.conf
@@ -24,9 +24,12 @@ server:
         # access-control: 2001:DB8/64 allow
         root-hints: /usr/local/etc/unbound/db.root
 
-        logfile: /usr/local/etc/logs/general.log
-        verbosity: 2
+        logfile: /usr/local/etc/logs/query.log
+        verbosity: 1
         log-queries: yes
+        log-tag-queryreply: yes
+        log-time-ascii: yes
+        log-replies: yes
 
 remote-control:
         # allows controling unbound using "unbound-control"
