--- a/docker/buildContext/docker-compose.yml
+++ b/docker/buildContext/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - /bin/sh
       - -c
       - |
-        service bind9 start
+        service named start
         tc qdisc add dev eth0 root netem delay 0ms
         tail -F anything
   com:
@@ -59,7 +59,7 @@ services:
       - /bin/sh
       - -c
       - |
-        service bind9 start
+        service named start
         tc qdisc add dev eth0 root netem delay 0ms
         tail -F anything
   net:
@@ -90,7 +90,7 @@ services:
       - /bin/sh
       - -c
       - |
-        service bind9 start
+        service named start
         tc qdisc add dev eth0 root netem delay 0ms
         tail -F anything
   target-com:
@@ -121,7 +121,7 @@ services:
       - /bin/sh
       - -c
       - |
-        service bind9 start
+        service named start
         tc qdisc add dev eth0 root netem delay 0ms
         tail -F anything
   inter-net:
@@ -152,7 +152,7 @@ services:
       - /bin/sh
       - -c
       - |
-        service bind9 start
+        service named start
         tc qdisc add dev eth0 root netem delay 0ms
         tail -F anything
   resolver-unbound-1.16.0:
@@ -229,7 +229,7 @@ services:
         target: /etc/bind/named.conf.options
       - type: bind
         source: resolver/db.root
-        target: /etc/bind/db.root
+        target: /usr/share/dns/root.hints
       - type: bind
         source: resolver/resolver-bind-9.18.4/logs
         target: /etc/logs
@@ -240,8 +240,8 @@ services:
       - /bin/sh
       - -c
       - |
-        ldconfig
-        service bind9 start
+        sed -i 's/OPTIONS=.*/OPTIONS="-4 -u bind"/' /etc/default/named
+        service named start
         tc qdisc add dev eth0 root netem delay 0ms
         tail -F anything
   client:
