run QMIN=enabled/disabled CNAME experiments

--- a/docker/buildContext/resolver/resolver-powerdns-4.7.3/recursor.conf
+++ b/docker/buildContext/resolver/resolver-powerdns-4.7.3/recursor.conf
@@ -602,7 +602,7 @@ lua-config-file=/etc/powerdns/recursor.lua
 #################################
 # qname-minimization	Use Query Name Minimization
 #
-# qname-minimization=yes
+#qname-minimization=no
 
 #################################
 # query-local-address	Source IP address for sending queries
