fix powerDNS problem

--- a/docker/buildContext/resolver/resolver-powerdns-4.7.3/recursor.conf
+++ b/docker/buildContext/resolver/resolver-powerdns-4.7.3/recursor.conf
@@ -377,7 +377,7 @@ logging-facility=0
 #################################
 # lua-config-file	More powerful configuration options
 #
-lua-config-file=/etc/powerdns/recursor.lua
+#lua-config-file=/etc/powerdns/recursor.lua
 
 #################################
 # lua-dns-script	Filename containing an optional 'lua' script that will be used to modify dns answers
