--- a/testbed/templates/bind.conf
+++ b/testbed/templates/bind.conf
@@ -1,6 +1,8 @@
 options {
     directory "/var/cache/bind";
     querylog yes;
+    dnstap {auth; client; resolver; forwarder;};
+    dnstap-output file "/etc/logs/log.dnstap";
 };
 
 logging {
