--- a/testbed/templates/dockerfiles/Dockerfile_powerdns
+++ b/testbed/templates/dockerfiles/Dockerfile_powerdns
@@ -7,8 +7,10 @@ RUN apt-get update \
   vim \
   locate
 
+ARG VERSION
+
 RUN touch /etc/apt/sources.list.d/pdns.list
-RUN echo "deb [arch=amd64] http://repo.powerdns.com/ubuntu bionic-rec-47 main" > /etc/apt/sources.list.d/pdns.list
+RUN echo "deb [arch=amd64] http://repo.powerdns.com/ubuntu bionic-rec-$VERSION main" > /etc/apt/sources.list.d/pdns.list
 RUN echo "Package: pdns-*\nPin: origin repo.powerdns.com\nPin-Priority: 600" >> /etc/apt/preferences.d/pdns
 RUN wget -qO - https://repo.powerdns.com/FD380FBB-pub.asc | apt-key add -
 RUN apt-get update \
