--- a/testbed/templates/resolver-powerdns/recursor.conf
+++ b/testbed/templates/resolver-powerdns/recursor.conf
@@ -602,7 +602,7 @@ lua-config-file=/etc/powerdns/recursor.lua
 #################################
 # qname-minimization	Use Query Name Minimization
 #
-qname-minimization={{.}}
+qname-minimization={{.QMin}}
 
 #################################
 # query-local-address	Source IP address for sending queries
