--- a/testbed/templates/resolver-unbound/unbound.conf
+++ b/testbed/templates/resolver-unbound/unbound.conf
@@ -13,7 +13,7 @@ server:
         # auto-trust-anchor-file: "/var/lib/unbound/root.key"
 
         # send minimal amount of information to upstream servers to enhance privacy
-        qname-minimisation: {{.}}
+        qname-minimisation: {{.QMin}}
 
         # specify the interface to answer queries from by ip-address.
         interface: 0.0.0.0
