--- a/testbed/templates/docker-compose.yml
+++ b/testbed/templates/docker-compose.yml
@@ -1,35 +1,35 @@
 version: "3.9"
 services:
-{{range $zone := .Zones}}
-  {{$zone.ID}}:
-    container_name: {{$zone.ID}}
+{{range $nameserver := .Nameservers}}
+  {{$nameserver.ID}}:
+    container_name: {{$nameserver.ID}}
     build:
-      dockerfile: dockerfiles/Dockerfile_{{$zone.Implementation.Name}}
+      dockerfile: dockerfiles/Dockerfile_{{$nameserver.Implementation.Name}}
       args:
-        VERSION: {{$zone.Implementation.Version}}
+        VERSION: {{$nameserver.Implementation.Version}}
     volumes:
       - type: bind
         source: db.root
-        target: {{$zone.Implementation.RootHintsTarget}}
+        target: {{$nameserver.Implementation.RootHintsTarget}}
       - type: bind
-        source: {{$zone.ID}}/config/
-        target: {{$zone.Implementation.ConfigTarget}}
+        source: {{$nameserver.ID}}/config/
+        target: {{$nameserver.Implementation.ConfigTarget}}
       - type: bind
         source: zones
         target: /zones
       - type: bind
-        source: {{$zone.ID}}/logs
-        target: {{$zone.Implementation.LogsTarget}}
+        source: {{$nameserver.ID}}/logs
+        target: {{$nameserver.Implementation.LogsTarget}}
     networks:
       dns-testbed:
-        ipv4_address: {{$zone.IP}}
+        ipv4_address: {{$nameserver.IP}}
     cap_add:
       - NET_ADMIN
     command:
       - /bin/sh
       - -c
       - |
-      {{range $cmd := $zone.Implementation.StartCommands}}
+      {{range $cmd := $nameserver.Implementation.StartCommands}}
         {{$cmd}}
       {{end}}
         tc qdisc add dev eth0 root netem delay 0ms
